--- a/client/src/container/NavBar/NavBar.module.css
+++ b/client/src/container/NavBar/NavBar.module.css
@@ -1,19 +1,23 @@
-.root{
+.root {
     background-color: #fff;
     color: #000000;
+    min-width: 25%;
 }
-.category{
+
+.category {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 20%;
+    width: 100%;
     padding: 8px 14px;
     cursor: pointer;
 }
-.element{
+
+.element {
     font-size: 15px;
     font-weight: 500;
 }
-.icon{
+
+.icon {
     font-weight: 600;
 }
