--- a/client/src/components/FeatureSection/FeatureSection.module.css
+++ b/client/src/components/FeatureSection/FeatureSection.module.css
@@ -1,8 +1,13 @@
 .cardSection {
     padding: 10px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     width: 100%;
+}
 
+@media (max-width: 768px) {
+    .cardSection {
+        grid-template-columns: 1fr;
+    }
 }
