--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,10 +1,54 @@
 .root {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #25A8D6;
     color: #ffff;
+    padding: 0 10px;
+    width: 100%;
 }
 
 .logo {
     font-weight: 600;
     font-size: 1.5rem;
     padding: 1rem;
+}
+
+.searchBar {
+    width: 50%;
+}
+
+.inputWrapper {
+    display: flex;
+    position: relative;
+    align-items: center;
+}
+
+.input {
+    width: 100%;
+    max-width: 600px;
+    padding: 10px;
+    border-radius: 10px;
+    color: #000;
+    border: none;
+}
+
+.typingText {
+    position: absolute;
+    color: #000;
+    padding: 10px;
+}
+
+.profilePic {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #f2f2f2;
+}
+
+.loginContainer {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 10px;
 }
