--- a/client/src/components/MarqueeText/MarqueeText.module.css
+++ b/client/src/components/MarqueeText/MarqueeText.module.css
@@ -1,8 +1,3 @@
-.root {
+.marqueeText {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: yellow;
-    height: 40px;
 }
