--- a/client/src/container/HeroTabSection/HeroTabSection.module.css
+++ b/client/src/container/HeroTabSection/HeroTabSection.module.css
@@ -1,7 +1,18 @@
 .root {
     width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .image {
     width: 100%;
+    height: auto;
+    display: block;
 }
