--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@keyframes marquee {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
