--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #25A8D6;
+    background-color: #468585;
     color: #ffff;
     padding: 0 10px;
     width: 100%;
