--- a/client/src/container/HeroTabSection/HeroTabSection.module.css
+++ b/client/src/container/HeroTabSection/HeroTabSection.module.css
@@ -13,6 +13,8 @@
 
 .image {
     width: 100%;
-    height: auto;
+    height: 55vh;
     display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
