--- a/client/src/container/NavBar/NavBar.module.css
+++ b/client/src/container/NavBar/NavBar.module.css
@@ -2,6 +2,7 @@
     background-color: #fff;
     color: #000000;
     min-width: 25%;
+    margin-top: 15px;
 }
 
 .category {
@@ -11,6 +12,7 @@
     width: 100%;
     padding: 8px 14px;
     cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .element {
