--- a/client/src/components/FeatureSection/components/Card.module.css
+++ b/client/src/components/FeatureSection/components/Card.module.css
@@ -5,4 +5,7 @@
     justify-content: center;
     align-items: center;
     border: 1px solid black;
+    font-weight: 600;
+    font-size: larger;
+    text-decoration: none;
 }
