--- a/client/src/components/FeatureSection/components/Card.module.css
+++ b/client/src/components/FeatureSection/components/Card.module.css
@@ -5,4 +5,8 @@
     justify-content: center;
     align-items: center;
     border: 1px solid black;
+    font-size: larger;
+    font-weight: 600;
+    text-decoration: none;
+    /*Text decoration not taking*/
 }
