--- a/client/src/container/Specialization/Specialization.module.css
+++ b/client/src/container/Specialization/Specialization.module.css
@@ -8,14 +8,14 @@
 
 .specializationsContainer h1 {
   color: #2c3e50;
-  margin-bottom: 30px;
-  font-size: 2.5rem;
+  margin-bottom: 10px;
+  font-size: 2.2rem;
   font-weight: bold;
 }
 
 .searchBox {
   width: 100%;
-  height: 10vh;
+  height: 8vh;
   max-width: 90vh;
   padding: 10px 15px;
   margin: 20px auto;
@@ -64,7 +64,7 @@
 }
 
 .specializationCard p {
-  color: #7f8c8d;
+  color: #468585;
   font-size: 1rem;
 }
 
