--- a/client/src/container/Specialization/components/DoctorsCard/DoctorCard.module.css
+++ b/client/src/container/Specialization/components/DoctorsCard/DoctorCard.module.css
@@ -1,29 +1,48 @@
-.card {
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(135deg, #e8f5e9, #c8e6c9);
-  border: 1px solid #4caf50;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  max-width: 350px;
-  margin: 20px auto;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+.container {
+  padding: 20px;
+  font-family: "Roboto", Arial, sans-serif;
+  /* text-align: center; */
+  background: linear-gradient(135deg, #e3f2fd, #9CDBA6);
+  min-height: 100vh;
 }
 
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+.heading {
+  text-align: center;
 }
+
+.container h1 {
+  color: #2c3e50;
+  margin-bottom: 6px;
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+
+.searchBox {
+  width: 100%;
+  height: 8vh;
+  max-width: 90vh;
+  padding: 10px 15px;
+  margin: 20px auto;
+  margin-bottom: 10px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 40px;
+  outline: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
 
 .imageContainer {
-  width: 100%;
-  height: 200px;
+
+  width: 30%;
+  height: 150px;
   background: #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  border-radius: 20px;
 }
 
 .image {
@@ -33,18 +52,38 @@
 }
 
 .info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 25px;
   padding: 15px;
 }
 
+.card {
+  margin: 10px;
+  padding: 20px;
+  min-width: 50vh;
+  background: #9CDBA6;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
+}
+
 .name {
-  font-size: 1.5rem;
-  color: #2e7d32;
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #2c3e50;
+  /* color: #2c3e50; */
   margin-bottom: 10px;
 }
 
 .details {
-  font-size: 0.9rem;
-  color: #4caf50;
+  font-size: 1rem;
+  color: #468585;
   margin: 5px 0;
 }
 
