--- a/client/src/container/Specialization/components/DoctorsCard/DoctorCard.module.css
+++ b/client/src/container/Specialization/components/DoctorsCard/DoctorCard.module.css
@@ -2,7 +2,7 @@
   padding: 20px;
   font-family: "Roboto", Arial, sans-serif;
   /* text-align: center; */
-  background: linear-gradient(135deg, #e3f2fd, #9CDBA6);
+  background: linear-gradient(to right, #e3f2fd, #99caa1);
   min-height: 100vh;
 }
 
@@ -32,11 +32,17 @@
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
+.cardDetails {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
 
 .imageContainer {
 
   width: 30%;
-  height: 150px;
+  height: 250px;
   background: #f1f1f1;
   display: flex;
   align-items: center;
@@ -79,6 +85,8 @@
   color: #2c3e50;
   /* color: #2c3e50; */
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .details {
@@ -87,20 +95,27 @@
   margin: 5px 0;
 }
 
+.button {
+  display: flex;
+  justify-content: center;
+}
+
 .bookButton {
   margin-top: 15px;
-  padding: 10px 15px;
+  padding: 15px 20px;
+  font-size: medium;
   background: #4caf50;
   color: #fff;
   font-size: 1rem;
   border: none;
-  border-radius: 6px;
+  border-radius: 50px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .bookButton:hover {
   background: #388e3c;
+  transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
